# SCALOP

./: .gitignore  MANIFEST.in  README.md  pixi.toml  pyproject.toml  setup.py
lib/python/scalop/: LoopGraft.py  _types.py  inhouse_predict.py  predict.py  updatedb.py  utils.py
lib/python/scalop/prosci/util/: pdb.py
tests/: test_golden.py  test_smoke.py
tests/golden/webserver/: kabat_chothia_chothia.txt  kabat_chothia_imgt.txt  kabat_chothia_north.txt  kabat_imgt_chothia.txt  kabat_imgt_imgt.txt  kabat_imgt_north.txt  sample_chothia_chothia.txt  sample_chothia_imgt.txt  sample_chothia_north.txt  sample_imgt_chothia.txt  sample_imgt_imgt.txt  sample_imgt_north.txt
